// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`resolveObjectKeysToArray can resolve imported objects passed to Object.keys 1`] = `
[
  ""bar"",
  ""foo"",
  ""1"",
  ""2"",
  ""3"",
  ""baz"",
]
`;

exports[`resolveObjectKeysToArray can resolve spreads from imported objects 1`] = `
[
  ""foo"",
  ""baz"",
  ""bar"",
]
`;

exports[`resolveObjectKeysToArray resolves Object.keys but ignores duplicates 1`] = `
[
  ""boo"",
  ""foo"",
  ""doo"",
]
`;

exports[`resolveObjectKeysToArray resolves Object.keys but ignores duplicates with getter and setter 1`] = `
[
  ""x"",
]
`;

exports[`resolveObjectKeysToArray resolves Object.keys when using getters 1`] = `
[
  ""boo"",
  ""foo"",
  ""bar"",
]
`;

exports[`resolveObjectKeysToArray resolves Object.keys when using resolvable spread 1`] = `
[
  ""boo"",
  ""foo"",
  ""doo"",
]
`;

exports[`resolveObjectKeysToArray resolves Object.keys when using setters 1`] = `
[
  ""boo"",
  ""foo"",
  ""bar"",
]
`;

exports[`resolveObjectKeysToArray resolves Object.keys with identifiers 1`] = `
[
  ""bar"",
  ""foo"",
]
`;

exports[`resolveObjectKeysToArray resolves Object.keys with literals 1`] = `
[
  ""bar"",
  ""5"",
]
`;

exports[`resolveObjectKeysToArray resolves Object.keys with literals as computed key 1`] = `
[
  ""bar"",
  ""5"",
]
`;
